add: get recipe book
