# src/controllers/recipe-book/recipe-book.controller.ts
@@ -1,17 +1,28 @@
-import { Controller, Get, Put } from '@nestjs/common';
+import { Controller, Get, Inject, Param, Put } from '@nestjs/common';
 import {
   ApiBearerAuth,
   ApiBody,
   ApiOperation,
+  ApiParam,
   ApiResponse,
   ApiTags,
 } from '@nestjs/swagger';
 import { UpdateRecipeBookDto } from './recipe-book.dto';
-import { RecipePresenter } from '../recipe/recipe.presenter';
+import { RecipeBookPresenter } from './recipe-book.presenter';
+import {
+  GetRecipeBookUseCase,
+  UseCaseProxy,
+  UseCaseProxyModule,
+} from 'src/use-cases';
+
 @ApiTags('recipe-books')
 @ApiBearerAuth()
 @Controller('recipe-books')
 export class RecipeBookController {
+  constructor(
+    @Inject(UseCaseProxyModule.GET_RECIPE_BOOK_USE_CASE)
+    private readonly getRecipeBookUseCase: UseCaseProxy<GetRecipeBookUseCase>,
+  ) {}
   @Put(':id')
   @ApiOperation({ operationId: 'updateRecipeBook' })
   @ApiBody({
@@ -20,7 +31,7 @@ export class RecipeBookController {
   @ApiResponse({
     status: 200,
     description: '料理本更新',
-    type: RecipePresenter,
+    type: RecipeBookPresenter,
   })
   async update() {
     try {
@@ -32,9 +43,18 @@ export class RecipeBookController {
   @ApiResponse({
     status: 200,
     description: '料理本とユーザー一覧取得',
-    type: RecipePresenter,
+    type: RecipeBookPresenter,
   })
-  async show() {
+  @ApiParam({
+    name: 'id',
+    type: String,
+    required: true,
+    description: 'recipeBookId',
+  })
+  async show(@Param('id') id: string) {
+    return new RecipeBookPresenter(
+      await this.getRecipeBookUseCase.getInstance().execute(id),
+    );
     // TODO: 料理本とユーザー一覧取得
   }
 }
